# mybotshop

./: LICENSE  README.md
install/: local_setup.sh  setup.sh
install/cmake_modules/share/cmake_modules/: local_setup.bash  (+5 more)
install/unitree_ros2_example/: g1_low_level_example  low_level_ctrl  low_level_ctrl_hg  read_low_state  read_low_state_hg  read_motion_state  read_wireless_controller  sport_mode_ctrl
log/: latest_build
src/mybotshop/: go2_install.sh
src/mybotshop/d1_controller/: CMakeLists.txt  README.md  package.xml
src/mybotshop/d1_controller/config/: d1_config.yaml
src/mybotshop/d1_controller/launch/: controller.launch.py
src/mybotshop/d1_controller/src/: d1_controller.cpp
src/mybotshop/go2_bringup/: CMakeLists.txt
src/mybotshop/go2_depth_camera/: CMakeLists.txt  package.xml
src/mybotshop/go2_description/: CMakeLists.txt
src/mybotshop/go2_docking/: CMakeLists.txt  README.md  package.xml
src/mybotshop/go2_docking/config/: go2_docking.yaml
src/mybotshop/go2_docking/go2_docking/: libapriltag.py
src/mybotshop/go2_docking/include/docker/: go2_docker.h
src/mybotshop/go2_docking/launch/: apriltag.launch.py  docking.launch.py
src/mybotshop/go2_docking/scripts/: april_ros_pub  docking_client.py
src/mybotshop/go2_docking/src/: dock_navi_node.cpp
src/mybotshop/go2_gazebo/: CMakeLists.txt  README.md  package.xml
src/mybotshop/go2_gazebo/config/: ros_gz.yaml
src/mybotshop/go2_gazebo/launch/: go2_fortress_simulation.launch.py
src/mybotshop/go2_gazebo/worlds/: fortress-plane.sdf
src/mybotshop/go2_gps/: CMakeLists.txt  README.md
src/mybotshop/go2_host/: CMakeLists.txt
src/mybotshop/go2_host/config/: host_control.yaml  teleop_control.yaml
src/mybotshop/go2_host/go2_host/: __init__.py  libjoypy.py
src/mybotshop/go2_host/launch/: joy_teleop.launch.py
src/mybotshop/go2_host/scripts/: logitech_f710
src/mybotshop/go2_interface/: CMakeLists.txt
src/mybotshop/go2_joystick/: CMakeLists.txt  package.xml
src/mybotshop/go2_lidars/: CMakeLists.txt  package.xml
src/mybotshop/go2_lidars/config/: livox_mid360.json  ouster_params.yaml
src/mybotshop/go2_lidars/launch/: hesai.launch.py  livox_mid360.launch.py  obstacle_avoidance.launch.py  ouster.launch.py
src/mybotshop/go2_lidars/src/: obstacle_avoidance.cpp
src/mybotshop/go2_manipulation/: CMakeLists.txt
src/mybotshop/go2_manipulation/config/: go2_manipulation.yaml
src/mybotshop/go2_manipulation/go2_manipulation/: __init__.py  arm_poses.py  openmanipulator_bridge
src/mybotshop/go2_manipulation/launch/: moveit2.launch.py  openmanipulator.launch.py
src/mybotshop/go2_moveit/: .setup_assistant  CMakeLists.txt
src/mybotshop/go2_moveit/config/: go2_om.srdf  go2_om_li.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/mybotshop/go2_moveit/launch/: custom_moveit.launch.py  move_group.launch.py  moveit_fake.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  system_openmanipulator.launch.py  system_servo.launch.py  warehouse_db.launch.py
src/mybotshop/go2_navigation/: CMakeLists.txt  README.md
src/mybotshop/go2_platform/: CMakeLists.txt
src/mybotshop/go2_platform/config/: go2_cam.yaml  go2_domain_bridge.yaml  go2_platform.yaml
src/mybotshop/go2_platform/go2_platform/: go2_statepublisher
src/mybotshop/go2_platform/include/qre/: go2_platform.h
src/mybotshop/go2_platform/launch/: bridge.launch.py  camera.launch.py  hardware.launch.py  laserscan.launch.py  state_publisher.launch.py
src/mybotshop/go2_platform/src/: go2_highroscontrol.cpp  go2_lowlevel_example.cpp  go2_scan_node.cpp  go2_video_publisher.cpp
src/mybotshop/go2_webserver/: CMakeLists.txt  README.md  requirements.txt  webserver_installer.sh
src/mybotshop/go2_webserver/config/: robot_info.yaml  robot_webserver.yaml
src/mybotshop/go2_webserver/go2_webserver/: __init__.py  libgpsconverter.py  librealtimemic.py  libroscustom.py
src/mybotshop/go2_webserver/go2_webserver/static/: styles.css
src/mybotshop/go2_webserver/go2_webserver/static/common/: footer.html  navbar.html
src/mybotshop/go2_webserver/go2_webserver/static/drawio/: wallpaper.drawio
src/mybotshop/go2_webserver/go2_webserver/static/models/: go2_simple.glb  gps.dae
src/mybotshop/go2_webserver/go2_webserver/static/scripts/: audio_record_script.js  battery_status_script.js  common_script.js  config_editor_script.js  connection_status_script.js  console_script.js  firmware_script.js  joystick_custom_script.js  joystick_native_script.js  navi_indoor_script.js  navi_outdoor_script.js  robot_status_script.js  slider_script.js  system_script.js  telemetry_script.js  video_stream_script.js  vnc_script.js  webserver_mic_script.js
src/mybotshop/go2_webserver/go2_webserver/static/webaudio/: audio_generator
src/mybotshop/go2_webserver/go2_webserver/templates/: console.html  index.html  login.html  navi_indoor.html  navi_outdoor.html  safety.html  settings.html  telemetry.html  vnc.html
src/mybotshop/go2_webserver/launch/: ros_test.launch.py  webserver.launch.py
src/mybotshop/go2_webserver/navi_outdoor_nogozones/: gps_coordinates.json
src/mybotshop/go2_webserver/navi_outdoor_waypoints/: gps_coordinates.json
src/mybotshop/go2_webserver/scripts/: compile_binary.sh  webserver
src/mybotshop/go2_webserver/ssl/: cert.pem  key.pem
src/mybotshop/go2_webserver/test/: test_joint_diag.py
src/mybotshop/go2_webserver/test/maps/: test_map.pgm  test_map.yaml
src/mybotshop/go2_zt30/: CMakeLists.txt  README.md
src/mybotshop/go2_zt30/config/: camera.yaml
src/mybotshop/go2_zt30/go2_zt30/: __init__.py  libzt30.py
src/mybotshop/go2_zt30/go2_zt30/siyi_sdk/: __init__.py  siyi_message.py  siyi_sdk.py  test.py
src/mybotshop/go2_zt30/launch/: zt30.launch.py
src/mybotshop/go2_zt30/scripts/: driver
src/mybotshop/go2_zt30/src/: rtsp_to_image.cpp
src/mybotshop/go2w_actuator_control/: CMakeLists.txt  README.md  package.xml
src/mybotshop/go2w_actuator_control/scripts/: go2w_stand_sit.py
(+1970 files in other folders)
