<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2w_actuator_control</name>
  <version>1.0.0</version>
  <description>
    Low-level actuator control demo for Unitree GO2-W wheeled quadruped robot.
    Demonstrates PD position control using Unitree SDK2.
  </description>

  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <license>Apache-2.0</license>
  <author email="support@mybotshop.de">Salman Omar Sohail</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
